--- a/ansible/roles/base_config/tasks/main.yml
+++ b/ansible/roles/base_config/tasks/main.yml
@@ -36,34 +36,37 @@
     - setools-console
     - libsemanage-python
     - policycoreutils-python
-    - python2-pip
+    - python3-pip
     - google-cloud-sdk
 
 - name: "Upgrade pip"
   pip: 
     name: pip
     state: latest
-    executable: pip
+    executable: pip3
 
 - name: "Upgrade pip locally"
-  become: false
+  become: true
   local_action:
     module: pip
     name: pip
     state: latest
-    executable: pip
+    executable: pip3
 
 - name: "Install python modules"
   pip:
     name: "{{ packages }}"
     state: latest
-    executable: pip
+    executable: pip3
   vars:
     packages:
-    - "pyasn1"
+    - "pyasn1==0.4.8"
     - "pyasn1_modules"
     - "google.auth"
     - "google-auth-httplib2"
+    - "google-api-python-client==1.6.7"
+    - "python-gflags==2.0"
+    - "rsa==3.4.2"
     - "jinja2"
 
 - name: "Install python modules locally"
@@ -72,7 +75,7 @@
     module: pip
     name: "{{ packages }}"
     state: latest
-    executable: pip
+    executable: pip3
   vars:
     packages:
     - "jinja2"
