--- a/ansible/roles/pcm_install/tasks/main.yml
+++ b/ansible/roles/pcm_install/tasks/main.yml
@@ -2,23 +2,6 @@
 - meta: end_play
   when: (ansible_distribution != "CentOS" and ansible_distribution_major_version != "7")
 
-#
-#- name: Copy fence_gce_fixed to system
-#  copy:
-#    src: "fence_gce.py"
-#    dest: "/usr/sbin/fence_gce_fixed"
-#    owner: root
-#    group: root
-#    mode: 0755
-#
-#- name: Copy gcp-vpc-move-vip-fixed to system
-#  copy:
-#    src: "gcp-vpc-move-vip-fixed2.py"
-#    dest: "/usr/lib/ocf/resource.d/heartbeat/gcp-vpc-move-vip-fixed"
-#    owner: root
-#    group: root
-#    mode: 0755
-
 - name: Install components for building
   yum:
     name: "{{ packages }}"
@@ -39,6 +22,8 @@
     - python2-google-api-client
     - python2-google-auth
     - python2-pyroute2
+    - pexpect
+    - python-requests
 
 - name: Check for replay (/opt/pcs_resource_install_done exists)
   stat:
@@ -60,14 +45,6 @@
     force: yes
   when:
     - pcs_resource_install_done.stat.exists != True
-
-#- name: Clone resource-agents from git to /root/resource-agents
-#  git:
-#    repo: 'https://github.com/ClusterLabs/resource-agents.git'
-#    dest: /root/resource-agents/
-#    clone: yes
-#  when:
-#    - pcs_resource_install_done.stat.exists != True
 
 - name: "Download and unzip resource-agents"
   unarchive:
@@ -160,17 +137,6 @@
   when:
     - pcs_fence_install_done.stat.exists != True
 
-#- name: "Download and unzip fence-agents"
-#  unarchive:
-#    src: "https://github.com/ClusterLabs/fence-agents/archive/v4.7.0.zip"
-#    dest: "/root"
-#    owner: "root"
-#    group: "root"
-#    mode: "0755"
-#    remote_src: true
-#  when:
-#    - pcs_fence_install_done.stat.exists != True
-
 - name: Run pre-build scripts from /root/fence-agents
   command: "{{ item }}"
   args:
@@ -212,10 +178,6 @@
     packages:
     - pcs
     - pacemaker
-#    - fence-agents-all
-#    - fence-agents-gce
-#    - resource-agents
-#    - resource-agents-gcp
 
 - name: Set password for local hacluster user
   user:
